[project]
name = "stromapi"
version = "0.1.0"
description = "Generate CSV exports for electricity price data"
requires-python = ">=3.11"
dependencies = [
    "pytz>=2025.2",
    "requests>=2.32.4",
    "simple-dwd-weatherforecast>=3.0.4",
    "tomli>=2.2.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
