[project]
name = "stromapi"
version = "0.1.0"
description = "Generate CSV exports for electricity price data"
requires-python = ">=3.11"
dependencies = [
    "entsoe-py>=0.7.0",
    "pytz>=2025.2",
    "simple-dwd-weatherforecast>=3.0.4",
    "tomli>=2.2.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
